Projeto front end para portifólio

--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
                 </div>
                 <div class="img-beneficios">
                     <img src="images/IMAGEM1.png" alt="">
-                </div>
-            </div>
-        </section>
+                </div> <!--img-beneficios-->
+            </div> <!--center-->
+        </section> <!--beneficios-->
     
 </body>
 </html>
