--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <link href="style.css" rel="stylesheet" />
+    <link href="stylepro.css" rel="stylesheet" />
 </head>
     
    
@@ -158,6 +158,17 @@
                 </div>            
         </section>
 
+        <section class="contato">
+            <h1>Entre em Contato!</h1>
+            <div style="max-width:900px;" class="center">
+                <form method="post">
+                    <input type="text" placeholder="Seu Nome...">
+                    <input type="email" placeholder="Seu e-mail">
+                    <textarea placeholder="Sua Mensagem"></textarea>
+                    <input type="submit" name="acao" value="Enviar">
+                </form>
+            </div>
+        </section>
         
 
         <script src="jquery.js"></script>
